--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="grid-item grid-item-red"></div>
         <div class="grid-item grid-item-lgray">
             <h2 class="grid-item-lgray__heading">Sed faucibus quis</h2>
-            <p class=" common-text common-text_width_32">Fusce bibendum luctus massa, ut tincidunt lectus tincidunt in. Nulla tristique ipsum vitae lacus ullamcorper, at dictum nunc scelerisque.</p>
+            <p class=" common-text">Fusce bibendum luctus massa, ut tincidunt lectus tincidunt in. Nulla tristique ipsum vitae lacus ullamcorper, at dictum nunc scelerisque.</p>
         </div>
         <div class="grid-item grid-item-pic1"></div>
         <div class="grid-item grid-item-pic2"></div>
